--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,8 @@ jobs:
 
       - name: Set up Node.js
         uses: actions/setup-node@v4.1.0
+        with:
+          node-version: '20'
 
       - name: Install dependencies
         run: npm install
@@ -28,4 +30,5 @@ jobs:
           FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
         run:
           npm install -g firebase-tools
-          firebase deploy --only hosting
+          firebase use $FIREBASE_PROJECT_ID
+          firebase deploy --only hosting -m "Automatic deployment from GitHub Actions"
