--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,8 @@ jobs:
         env:
           FIREBASE_AUTH_TOKEN: ${{ secrets.FIREBASE_AUTH_TOKEN }}
           FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
-        run:
+        run: |
           npm install -g firebase-tools
+          firebase login:ci --no-localhost $FIREBASE_AUTH_TOKEN
           firebase use $FIREBASE_PROJECT_ID
           firebase deploy --only hosting -m "Automatic deployment from GitHub Actions"
