--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,6 @@ jobs:
           FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
         run: |
           npm install -g firebase-tools
-          echo "$FIREBASE_AUTH_TOKEN" | firebase login:ci
+          firebase login:ci --no-localhost
           firebase use $FIREBASE_PROJECT_ID
           firebase deploy --only hosting -m "Automatic deployment from GitHub Actions"
